<resources>
    <string name="app_name">LGConnect</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="controller">Controller</string>
    <string name="label_rv_wonders">Visit 7 Wonders</string>
    <string name="label_rv_charts">Send Charts</string>
    <string name="label_rv_markers">My Markers</string>
    <string name="lg_connect"><font color="#FFE1F5FE"><b>LG</b></font>Connect</string>
    <string name="search">Search for a place</string>
    <string name="card_search_title">View location on Liquid Galaxy</string>
    <string name="card_search_subtitle">Enter the name of the location you want to view on Liquid Galaxy</string>
    <string name="settings">Settings</string>
    <string name="reboot">Reboot</string>
    <string name="power_off">Power off</string>
    <string name="set_slave_refresh">Set slave refresh</string>
    <string name="reset_slave_refresh">Reset slave refresh</string>
    <string name="clear_kml">Clear KML</string>
    <string name="relaunch">Relaunch</string>
    <string name="control_your_system">Control your system</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="establish_connection_to_the_system">Establish connection to the system</string>
    <string name="connect">Connect</string>
    <string name="code_editor">Code editor</string>
    <string name="change_planet">Change Planet</string>
    <string name="send_kml">Send KML</string>
    <string name="kml_boilerplate">&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\n&lt;kml xmlns=\"http://www.opengis.net/kml/2.2\"&gt;\n\n&lt;/kml&gt;</string>
    <string name="no_network_title">No Network Connection</string>
    <string name="no_network_description">It looks like you are not connected to the internet. Please check your network settings and try again.</string>
    <string name="no_network_button_text">OK</string>
    <string name="connection_failed_title">Connection Failed</string>
    <string name="connection_failed_description">We could not establish a connection to the liquid galaxy. Please check your SSH credentials and make sure the rig is online.</string>
    <string name="connection_failed_button_text">OK</string>
    <string name="no_connection_title">No Connection</string>
    <string name="no_connection_description">You are not currently connected to the liquid galaxy. Please make sure you have established an SSH connection and try again.</string>
    <string name="no_connection_button_text">OK</string>
    <string name="connecting">Connecting...</string>
    <string name="no_markers_found">No markers found</string>
</resources>