<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lg_connect"
            android:textColor="@color/pale_blue"
            android:textSize="48sp" />

        <include layout="@layout/card_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/rv_wonders"
            android:text="@string/label_rv_wonders"
            android:textColor="@color/soft_green"
            android:textSize="28sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_wonders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:itemCount="1"
            tools:listitem="@layout/item_card_wonder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/rv_charts"
            android:text="@string/label_rv_charts"
            android:textColor="@color/pale_blue"
            android:textSize="28sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_charts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:itemCount="1"
            tools:listitem="@layout/item_card_chart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/rv_markers"
            android:text="@string/label_rv_markers"
            android:textColor="@color/pale_blue"
            android:textSize="28sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_markers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:listitem="@layout/item_card_marker" />

    </LinearLayout>

</ScrollView>